--- a/style.css
+++ b/style.css
@@ -167,3 +167,78 @@ section{
     margin-top: 30px;
     margin-bottom: 20px;
 }
+
+/*--resume-content*/
+
+.resume-content{
+
+    display: flex;
+    gap: 24px;
+}
+
+.resume .title{
+
+    font-weight: 700;
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 10px;
+
+}
+
+.resume-item{
+
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.resume .sub-title{
+
+    color: #757575;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px;
+
+}
+
+.resume .description{
+
+    color: #757575;
+}
+
+.Resume-button{
+
+    margin-top: 30px;
+    text-align: center;
+}
+
+
+
+.contratc{
+    display: flex;
+    gap: 120px;
+    background: rgb(248, 230, 234);
+    padding: 130px 200px;
+}
+
+.contract .section-title{
+
+    text-align: center;
+}
+
+.contratc input[type="text"] , input[type="email"] , textarea{
+
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    padding: 18px 30px ;
+}
+
+input{
+
+    height: 64px;
+}
+
+.contratc a{
+
+    text-decoration: none;
+}
